--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ button:focus,
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    background-color: var(--white);
 }
 
 .profile {
@@ -141,6 +142,7 @@ button:focus,
     max-width: 100%;
     padding: 20px;
     margin: auto;
+    background-color: var(--white);
 }
 
 .page-header__item {
