--- a/css/styles.css
+++ b/css/styles.css
@@ -115,14 +115,6 @@ button:focus,
     text-decoration: none;
 }
 
-.profile__portrait {
-    float: left;
-    width: 250px;
-    height: auto;
-    margin-right: 40px;
-    border-radius: 50%;
-}
-
 .page-footer {
     clear: both;
     display: flex;
@@ -133,8 +125,25 @@ button:focus,
 }
 
 .profile {
-    max-width: 700px;
-    margin: 0 auto;
+    max-width: 100%;
+    margin: 0 auto;  
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile__portrait {
+    width: 20%;
+    height: auto;
+    border-radius: 50%;
+}
+
+.welcome-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .page-header {
