--- a/css/style.production.css
+++ b/css/style.production.css
@@ -5,6 +5,7 @@
 * Browsers: last 4 version
 */
 
+
 /* primary color (Blue): #002263;
    secondary color: #C97C1A;
    active-color: #7D4A0A; 
@@ -132,14 +133,6 @@ button:focus,
     text-decoration: none;
 }
 
-.profile__portrait {
-    float: left;
-    width: 250px;
-    height: auto;
-    margin-right: 40px;
-    border-radius: 50%;
-}
-
 .page-footer {
     clear: both;
     display: -webkit-box;
@@ -153,11 +146,47 @@ button:focus,
         -ms-flex-pack: center;
             justify-content: center;
     text-align: center;
+    background-color: #ffffff;
 }
 
 .profile {
-    max-width: 700px;
-    margin: 0 auto;
+    max-width: 100%;
+    margin: 0 auto;  
+    display: -webkit-box;  
+    display: -ms-flexbox;  
+    display: flex; 
+    -webkit-box-orient: vertical; 
+    -webkit-box-direction: normal; 
+        -ms-flex-direction: column; 
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+
+.profile__portrait {
+    width: 20%;
+    height: auto;
+    border-radius: 50%;
+}
+
+.welcome-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .page-header {
@@ -167,6 +196,7 @@ button:focus,
     max-width: 100%;
     padding: 20px;
     margin: auto;
+    background-color: #ffffff;
 }
 
 .page-header__item {
@@ -209,7 +239,7 @@ button:focus,
         -ms-flex-pack: justify;
             justify-content: space-between;
     padding: 0;
-  width: 20%;
+    width: 20%;
 }
 
 .about-myself {
