--- a/css/style.production.css
+++ b/css/style.production.css
@@ -5,7 +5,6 @@
 * Browsers: last 4 version
 */
 
-
 /* primary color (Blue): #002263;
    secondary color: #C97C1A;
    active-color: #7D4A0A; 
@@ -24,7 +23,7 @@
 body {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: calc(16px + 0.390625vw);
     line-height: 1.6;
 }
 
@@ -44,7 +43,7 @@ h1 {
 }
 
 a {
-    color: ##002263;
+    color: #002263;
 }
 
 a:visited {
@@ -113,7 +112,7 @@ button:focus,
 
 .button_secondary {
     background-color: #C97C1A;
-    color: ##002263;
+    color: #002263;
 }
 
 .navigation-list {
@@ -187,6 +186,28 @@ button:focus,
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+}
+
+.skills-table {
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+    border: thin solid #002263;
+    max-width: 50%;
+}
+
+.skills-table thead tr {
+    color: #002263;
+    text-align: left;
+}
+
+.skills-table td {
+    padding: 9px 15px;
+    color: #002263;
+}
+
+.skills-table tbody tr {
+    border-top: 1px solid #002263;
 }
 
 .page-header {
@@ -267,54 +288,14 @@ button:focus,
     display: grid;
     -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr 1fr;
-    -ms-grid-rows: 300px 20px 300px;
-    grid-template-rows: 300px 300px;
     row-gap: 20px;
     -webkit-column-gap: 20px;
        -moz-column-gap: 20px;
             column-gap: 20px;
 }
 
-.grid > *:nth-child(1) {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-}
-
-.grid > *:nth-child(2) {
-    -ms-grid-row: 1;
-    -ms-grid-column: 3;
-}
-
-.grid > *:nth-child(3) {
-    -ms-grid-row: 1;
-    -ms-grid-column: 5;
-}
-
-.grid > *:nth-child(4) {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
-}
-
-.grid > *:nth-child(5) {
-    -ms-grid-row: 3;
-    -ms-grid-column: 3;
-}
-
-.grid > *:nth-child(6) {
-    -ms-grid-row: 3;
-    -ms-grid-column: 5;
-}
-
 .grid__item {
     background-color: lightgrey;
-}
-
-.grid__item:last-child {
-    -ms-grid-column: 3;
-    grid-column: 3 / 3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 2;
-    grid-row: 1 / 3;
 }
 
 .grid__item {
@@ -341,14 +322,6 @@ button:focus,
         min-height: auto;
         margin: 0;
     }
-
-    .grid__item:last-child {
-        -ms-grid-column: 3;
-        grid-column: 3 / 3;
-        -ms-grid-row: 1;
-        -ms-grid-row-span: 2;
-        grid-row: 1 / 3;
-    }
 }
 
 @media all and (max-width: 600px) {
@@ -358,14 +331,14 @@ button:focus,
     }
 }
 
-@media all and (min-width: 600px) and (max-width: 750px) {
+@media all and (min-width: 600px) and (max-width: 1200px) {
     .grid {
         -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media all and (max-width: 750px) {
+@media all and (max-width: 1200px) {
     .grid {
         row-gap: 10px;
         
