--- a/css/style.production.css
+++ b/css/style.production.css
@@ -25,6 +25,7 @@ body {
     font-weight: 400;
     font-size: calc(16px + 0.390625vw);
     line-height: 1.6;
+    margin: 0 10%;
 }
 
 h1 {
@@ -290,11 +291,53 @@ button:focus,
 
 .grid__item {
     background-color: lightgrey;
-}
-
-.grid__item {
     display: inline-block;
     width:33%;
+    padding: 5%;
+}
+
+input {
+    width: 50%;
+    padding: 10px;
+    border: 1px solid #002263;
+    border-radius: 4px;
+    margin: 10px 20px;
+    resize: vertical;
+}
+
+select {
+    width: 50%;
+    padding: 10px;
+    border: 1px solid #002263;
+    border-radius: 4px;
+    margin: 10px 20px;
+    resize: vertical;
+}
+
+textarea {
+    width: 50%;
+    padding: 10px;
+    border: 1px solid #002263;
+    border-radius: 4px;
+    margin: 10px 20px;
+    resize: vertical;
+}
+
+.contact-form {
+    border-radius: 5px;
+    background-color: lightgrey;
+    padding: 20px;
+    width: 50%;
+  }
+
+  .submit {
+    color: #002263;
+    padding: 10px 15px;
+    width: 20%;
+}
+
+.contact-form label {
+  display: block;
 }
 
 @supports (display: grid) {
