--- a/css/styles.css
+++ b/css/styles.css
@@ -238,6 +238,7 @@ input, select, textarea {
     border-radius: 4px;
     margin: 10px 20px;
     resize: vertical;
+    text-align: center;
 }
 
 .contact-form {
@@ -250,7 +251,7 @@ input, select, textarea {
   .submit {
     color: var(--primary-color);
     padding: 10px 15px;
-    width: 20%;
+    width: 50%;
 }
 
 .contact-form label {
