--- a/css/style.production.css
+++ b/css/style.production.css
@@ -6,7 +6,7 @@
 */
 
 /* primary color (Blue): #002263;
-   secondary color: #C97C1A;
+   secondary color: #aa6700;
    active-color: #7D4A0A; 
    sun color one: #edc655; 
    sun color two: #fcffad; 
@@ -38,7 +38,7 @@ a {
 }
 
 a:visited {
-    color: #C97C1A;
+    color: #aa6700;
 }
 
 a:hover, a:focus {
@@ -55,7 +55,7 @@ button {
     border: none;
     display: inline-block;
     font-family: inherit;
-    background-color: #C97C1A;
+    background-color: #aa6700;
     text-decoration: none;
     padding: 10px;
     border-radius: 3px;
@@ -70,7 +70,7 @@ button {
     border: none;
     display: inline-block;
     font-family: inherit;
-    background-color: #C97C1A;
+    background-color: #aa6700;
     text-decoration: none;
     padding: 10px;
     border-radius: 3px;
@@ -102,7 +102,7 @@ button:focus,
 }
 
 .button_secondary {
-    background-color: #C97C1A;
+    background-color: #aa6700;
     color: #002263;
 }
 
@@ -232,30 +232,35 @@ button:focus,
     width: 10%;
     height: auto;
 }
-.social-media {
+/*.social-media {
     width: 100%;
     height: auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
+    justify-content: center;
+  align-items: center;
+}*/
 
 .social-media-list {
     list-style-type: none;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
     padding: 0;
-    width: 20%;
+    /*width: 10%;*/
+}
+
+.social-media-list li {
+    margin: 2px;
 }
 
 .about-myself {
@@ -297,30 +302,33 @@ button:focus,
 }
 
 input {
-    width: 50%;
+    width: 80%;
     padding: 10px;
     border: 1px solid #002263;
     border-radius: 4px;
     margin: 10px 20px;
     resize: vertical;
+    text-align: center;
 }
 
 select {
-    width: 50%;
+    width: 80%;
     padding: 10px;
     border: 1px solid #002263;
     border-radius: 4px;
     margin: 10px 20px;
     resize: vertical;
+    text-align: center;
 }
 
 textarea {
-    width: 50%;
+    width: 80%;
     padding: 10px;
     border: 1px solid #002263;
     border-radius: 4px;
     margin: 10px 20px;
     resize: vertical;
+    text-align: center;
 }
 
 .contact-form {
@@ -333,7 +341,7 @@ textarea {
   .submit {
     color: #002263;
     padding: 10px 15px;
-    width: 20%;
+    width: 50%;
 }
 
 .contact-form label {
