--- a/css/styles.css
+++ b/css/styles.css
@@ -118,25 +118,18 @@ button:focus,
 }
 
 .profile {
-    max-width: 100%;
-    margin: 0 auto;  
-    display: flex; 
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    max-width: 80%;
+    margin: 0 auto; 
 }
-
 .profile__portrait {
-    width: 20%;
+    width: 50%;
     height: auto;
     border-radius: 50%;
-}
-
-.welcome-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    float: left;
+    margin-right: 10%;
+    float: left;
+    min-width: 400px;
+    max-width: 600px;
 }
 
 .skills-table {
@@ -184,20 +177,22 @@ button:focus,
     width: 10%;
     height: auto;
 }
-.social-media {
+/*.social-media {
     width: 100%;
     height: auto;
     display: flex;
     justify-content: center;
   align-items: center;
-}
+}*/
 
 .social-media-list {
     list-style-type: none;
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
     padding: var(--padding-zero);
-    width: 10%;
+    /*width: 10%;*/
 }
 
 .social-media-list li {
