--- a/css/style.production.css
+++ b/css/style.production.css
@@ -142,43 +142,18 @@ button:focus,
 }
 
 .profile {
-    max-width: 100%;
-    margin: 0 auto;  
-    display: -webkit-box;  
-    display: -ms-flexbox;  
-    display: flex; 
-    -webkit-box-orient: vertical; 
-    -webkit-box-direction: normal; 
-        -ms-flex-direction: column; 
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    max-width: 80%;
+    margin: 0 auto; 
 }
-
 .profile__portrait {
-    width: 20%;
+    width: 50%;
     height: auto;
     border-radius: 50%;
-}
-
-.welcome-text {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    float: left;
+    margin-right: 10%;
+    float: left;
+    min-width: 400px;
+    max-width: 600px;
 }
 
 .skills-table {
