--- a/css/styles.css
+++ b/css/styles.css
@@ -241,6 +241,8 @@ input, select, textarea {
     background-color: var(--grid-item-color);
     padding: 20px;
     width: 50%;
+    min-width: 300px;
+    max-width: 500px;
   }
 
   .submit {
