--- a/css/style.production.css
+++ b/css/style.production.css
@@ -21,11 +21,39 @@
 }
 
 body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     font-size: calc(16px + 0.390625vw);
     line-height: 1.6;
-    margin: 0 10%;
+}
+
+main {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 20px;
 }
 
 h1 {
@@ -124,21 +152,9 @@ button:focus,
 }
 
 .page-footer {
-    clear: both;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    padding: 20px;
     text-align: center;
     background-color: #ffffff;
-    position: sticky;
-    bottom: 0;
 }
 
 .profile {
@@ -207,13 +223,6 @@ button:focus,
     width: 10%;
     height: 10%;
 }
-/*.social-media {
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-  align-items: center;
-}*/
 
 .social-media-list {
     list-style-type: none;
@@ -231,7 +240,6 @@ button:focus,
         -ms-flex-align: end;
             align-items: flex-end;
     padding: 0;
-    /*width: 10%;*/
 }
 
 .social-media-list li {
@@ -274,7 +282,29 @@ button:focus,
     display: inline-block;
     width:33%;
     padding: 5%;
+    position: relative;
 }
+
+.grid__item img {
+    max-width: 100%;
+    height: auto;
+}
+
+.grid__item-tags {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    text-align: center;
+  }
+  
+  .grid__item-tags a {
+    margin: 5px;
+  }
+  
+  .grid__item-tags img {
+    height: 24px;
+  }
 
 input {
     width: 80%;
@@ -457,4 +487,10 @@ textarea {
 .cloud-back {
     -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
             animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
+.profile::after {
+    content: "";
+    display: table;
+    clear: both;
 }
