--- a/css/styles.css
+++ b/css/styles.css
@@ -26,11 +26,23 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     font-size: calc(16px + 0.390625vw);
     line-height: 1.6;
-    margin: 0 10%;
+}
+
+main {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
 }
 
 h1 {
@@ -107,14 +119,9 @@ button:focus,
 }
 
 .page-footer {
-    clear: both;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    padding: 20px;
     text-align: center;
     background-color: var(--white);
-    position: sticky;
-    bottom: 0;
 }
 
 .profile {
@@ -177,13 +184,6 @@ button:focus,
     width: 10%;
     height: 10%;
 }
-/*.social-media {
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-  align-items: center;
-}*/
 
 .social-media-list {
     list-style-type: none;
@@ -192,7 +192,6 @@ button:focus,
     justify-content: center;
     align-items: flex-end;
     padding: var(--padding-zero);
-    /*width: 10%;*/
 }
 
 .social-media-list li {
@@ -224,7 +223,29 @@ button:focus,
     display: inline-block;
     width:33%;
     padding: 5%;
+    position: relative;
 }
+
+.grid__item img {
+    max-width: 100%;
+    height: auto;
+}
+
+.grid__item-tags {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    text-align: center;
+  }
+  
+  .grid__item-tags a {
+    margin: 5px;
+  }
+  
+  .grid__item-tags img {
+    height: 24px;
+  }
 
 input, select, textarea {
     width: 80%;
@@ -338,4 +359,10 @@ input, select, textarea {
 
 .cloud-back {
     animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
+.profile::after {
+    content: "";
+    display: table;
+    clear: both;
 }
