--- a/css/style.production.css
+++ b/css/style.production.css
@@ -65,10 +65,6 @@ a {
     color: #002263;
 }
 
-a:visited {
-    color: #aa6700;
-}
-
 a:hover, a:focus {
     /* no underlining when you hover on the link*/
     text-decoration: none;
@@ -76,21 +72,6 @@ a:hover, a:focus {
 
 a:active {
     color: #7D4A0A;
-}
-
-button {
-    color: #ffffff;
-    border: none;
-    display: inline-block;
-    font-family: inherit;
-    background-color: #aa6700;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 3px;
-    border-bottom: 2px solid;
-    -webkit-transition: 0.2s opacity;
-    -o-transition: 0.2s opacity;
-    transition: 0.2s opacity;
 }
 
 .button {
@@ -103,17 +84,6 @@ button {
     padding: 10px;
     border-radius: 3px;
     border-bottom: 2px solid;
-    -webkit-transition: 0.2s opacity;
-    -o-transition: 0.2s opacity;
-    transition: 0.2s opacity;
-}
-
-button:hover, 
-button:focus,
-.button:hover,
-.button:focus {
-    cursor: pointer;
-    opacity: 0.8;
 }
 
 .button-container {
@@ -127,11 +97,6 @@ button:focus,
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-}
-
-.button_secondary {
-    background-color: #aa6700;
-    color: #002263;
 }
 
 .navigation-list {
@@ -176,6 +141,7 @@ button:focus,
     border-collapse: collapse;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 5%;
     border: thin solid #002263;
     max-width: 50%;
 }
