--- a/css/style.production.css
+++ b/css/style.production.css
@@ -132,10 +132,18 @@ a:active {
     border-radius: 50%;
     float: left;
     margin-right: 10%;
-    float: left;
     min-width: 200px;
     max-width: 600px;
 }
+
+@media all and (max-width: 600px) {
+    .profile__portrait {
+      float: none;
+      margin-right: 0;
+      margin-bottom: 20px;
+      max-width: 100%;
+    }
+  }  
 
 .skills-table {
     border-collapse: collapse;
@@ -213,19 +221,14 @@ a:active {
 }
 
 .about-myself {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-    padding: 0;
-}
+        background-color: #ffffff;
+        padding: 20px;
+        border: 1px solid lightgrey;
+        -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        margin: 20px auto 0;
+        max-width: 700px;
+      }
 
 .activities {
     list-style-type: none;
@@ -262,6 +265,7 @@ a:active {
     left: 0;
     right: 0;
     text-align: center;
+    margin-top: 20px;
   }
   
   .grid__item-tags a {
@@ -271,6 +275,16 @@ a:active {
   .grid__item-tags img {
     height: 24px;
   }
+
+  .space_bottom {
+      padding-bottom: 20px;
+  }
+
+  img.project_image {
+    -o-object-fit: cover;
+       object-fit: cover;
+    aspect-ratio: 16/9;
+}
 
 input {
     width: 80%;
@@ -366,93 +380,6 @@ textarea {
         grid-column: auto / auto;
         grid-row: auto / auto;
     }
-}
-
-@-webkit-keyframes color-change {
-    0% {
-        fill: #edc655;
-    }
-
-    50% {
-        fill: #fcffad;
-    }
-
-    to {
-        fill: #f76414;
-    }
-}
-
-@keyframes color-change {
-    0% {
-        fill: #edc655;
-    }
-
-    50% {
-        fill: #fcffad;
-    }
-
-    to {
-        fill: #f76414;
-    }
-}
-
-.sun {
-  -webkit-animation: 4s color-change infinite alternate linear;
-          animation: 4s color-change infinite alternate linear;
-}
-
-@-webkit-keyframes cloud-move {
-    from {
-        -webkit-transform: translate(0, 50px);
-                transform: translate(0, 50px);
-    }
-    to {
-        -webkit-transform: translate(200px, 50px);
-                transform: translate(200px, 50px);
-    }
-}
-
-@keyframes cloud-move {
-    from {
-        -webkit-transform: translate(0, 50px);
-                transform: translate(0, 50px);
-    }
-    to {
-        -webkit-transform: translate(200px, 50px);
-                transform: translate(200px, 50px);
-    }
-}
-
-.cloud-front {
-    -webkit-animation: 30s cloud-move infinite alternate linear;
-            animation: 30s cloud-move infinite alternate linear;
-}
-
-@-webkit-keyframes cloud-move-reverse {
-    from {
-        -webkit-transform: translate(446px, 48px);
-                transform: translate(446px, 48px);
-    }
-    to {
-        -webkit-transform: translate(100px, 48px);
-                transform: translate(100px, 48px);
-    }
-}
-
-@keyframes cloud-move-reverse {
-    from {
-        -webkit-transform: translate(446px, 48px);
-                transform: translate(446px, 48px);
-    }
-    to {
-        -webkit-transform: translate(100px, 48px);
-                transform: translate(100px, 48px);
-    }
-}
-
-.cloud-back {
-    -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-            animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
 .profile::after {
