--- a/css/style.production.css
+++ b/css/style.production.css
@@ -142,6 +142,10 @@ a:active {
       margin-right: 0;
       margin-bottom: 20px;
       max-width: 100%;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 800px;
     }
   }  
 
@@ -333,6 +337,10 @@ textarea {
 
 .contact-form label {
   display: block;
+}
+
+#text__portfolio {
+    overflow: hidden;
 }
 
 @supports (display: grid) {
